[project]
name = "comfyui-videoplayer"
description = "A silly POC Video Player for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BetaDoggo/ComfyUI-VideoPlayer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "betadoggo"
DisplayName = "ComfyUI-VideoPlayer"
Icon = ""
